media/css/mozorg/home.less
/* ... */
// @Extra content - The lower section of the page
.extra {
    background: #c1423d;
    padding: 40px 0;
    margin-bottom: 0;
    color: #fff;
    text-shadow: 0 1px 0 rgba(0, 0, 0, .1);

    h2 {
        font-size: 34px;
        margin: 0 0 .75em;
        color: #fff;
        text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
    }
}



// @Newsletter form
.newsletter-form {
    .span(4);
    float: right;
    background: transparent;
    padding: 0;
    border: 0;
    box-shadow: none;
}

#footer-email-form {
    h3 {
        font-size: 34px;
        margin: 0 0 .75em;
        color: #fff;
        text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
    }

    .form-contents,
    .form-submit {
        width: auto;
        float: none;
        margin: 0 0 @baseLine;
    }

    .field-email input {
        width: 80%;
        padding: 10px 5%;
        border-radius: .5em;
    }

    a:link,
    a:visited {
        color: #fff;
    }

    .button {
        width: 90%;
        padding: 10px 5%;
    }
}



// @Download Firefox promo bar
#firefox-promo {
    padding-top: 10px;
    padding-bottom: 0;
    margin: 0;
    position: relative;

    .container {
        width: (@widthDesktop - (@gridGutterWidth * 2));
        padding-top: 40px;
        padding-bottom: 10px;
        margin: 0 auto;
    }

    h3 {
        font-size: 40px;
        letter-spacing: -.05em;
        margin: -35px 0 0;
        padding: 40px 0 0;
        width: 70%;
        color: #999;
        float: left;

        b {
            .open-sans;
            border-right: 1px dotted @borderColor;
            color: @textColorSecondary;
            font-weight: normal;
            margin-right: 10px;
            padding-right: 20px;
        }
    }

    img {
        float: left;
        margin: -30px 20px -5px 0;
    }

    #firefox-promo-link {
        margin: 0;
        position: static;

        &:hover,
        &:focus,
        &:active {
            text-decoration: none;
        }
    }

    .download-button {
        margin-top: -5px;
        float: right;
        max-width: 40%;
        padding-bottom: 6px;
    }

    .download-link {
        width: 280px;
    }

    .download-content {
        padding: 15px 20px 15px 65px;
        background-position: 20px 24px;
    }

    .download-title {
        display: none;
    }

    .download-subtitle {
        color: #fff;
        text-transform: uppercase;
        font-weight: bold;
        display: block;
        font-size: 18px;
        line-height: 1.1;
        letter-spacing: -.05em;
        /* Reset the styles for Android: */
        position: static;
        width: auto;
        text-align: left;
    }

    .download-lang,
    .download-platform {
        .open-sans-light;
        color: #360;
        display: inline;
        font-size: 11px;
        font-weight: bold;
        text-shadow: 0 1px #9c6;
    }

    .download-lang {
        position: static;
        text-align: left;
        width: auto;
    }

    .download-platform:before {
        content: '• ';
    }
}

.html-rtl #firefox-promo {
    h3 {
        float: right;

        b {
            border-right: 0;
            border-left: 1px dotted @borderColor;
            margin-right: 0;
            margin-left: 10px;
            padding-right: 0;
            padding-left: 20px;
        }
    }

    img {
        float: right;
        margin: -30px 0 -5px 20px;
    }

    .download-button {
        float: left;
    }
}


// @News
.extra-news {
    .span(7);

    .hfeed {
        list-style: none;
        margin: 0 0 .5em;
    }

    .hentry {
        margin: 0;
    }

    .entry-title {
        font-size: 20px;
        line-height: 1.2;
        .open-sans;
    }
}

.js .extra-news .hentry {
    height: 6em;
}

.news-buttons {
    border-right: 1px solid #ccc;
    margin-right: 10px;

    button {
        background: transparent url(/media/img/home/control-arrows.png) no-repeat;
        border: 0;
        cursor: pointer;
        display: inline-block;
        height: 25px;
        margin: 0 10px 0 0;
        overflow: hidden;
        padding: 0;
        text-indent: -99em;
        width: 25px;
    }

    .btn-next {
        background-position: -30px 0;
    }

    .btn-prev {
        background-position: 0 0;
    }

    .disabled {
        opacity: .5;
        &:hover,
        &:focus {
            opacity: .8;
        }
    }
}

// @Contribute
.extra-contribute {
    .span(7);

    p {
        .open-sans-light;
        font-size: 20px;
    }

}

.extra-news a:link,
.extra-news a:visited,
.extra-contribute a:link,
.extra-contribute a:visited {
    color: #fff;
    text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
}

.extra-contribute a {
    font-weight: bold;
}

.news-buttons button {
    background-image: url(/media/img/home/control-arrows-lt.png);
}
/* ... */

